# TextParser

./: .gitignore  CMakeLists.txt  README.md  main.cpp  text-parser-kp-toop-win.sln
data/: Анна_Каренина.txt  Война_и_мир.txt  Дар.txt  Лолита.txt  тест.json
include/: analysissettings.h  analyzer.h  core.h  filemanager.h  textaanalyzer.h  utils.h
src/: analysissettings.cpp  filemanager.cpp  textanalyzer.cpp  utils.cpp
text-parser-kp-toop-win/: README.md  analysissettings.cpp  analysissettings.h  analyzer.h  core.h  dd.txt  filemanager.cpp  filemanager.h  main.cpp  res.txt  res1.txt  res2.txt  tabulate.hpp  text-parser-kp-toop-win.vcxproj  text-parser-kp-toop-win.vcxproj.filters  textaanalyzer.h  textanalyzer.cpp  utils.cpp  utils.h
text-parser-kp-toop-win/data/: 1.txt  2.txt  Анна_Каренина.txt  Война_и_мир.txt  Дар.txt  Лолита.txt
